--- a/css/home.css
+++ b/css/home.css
@@ -7,14 +7,21 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    flex-wrap:wrap;
+    margin:10px 0 80px;
+    padding-bottom:40px;
 }
 
-.card, .main{
+.card{
     margin: 10px 0;
 }
 
-.logout{
-   padding:5px 8px;
-   position:fixed;
-   bottom:0;
+.container-buttons{
+   display: flex;
+   margin-top:80px;
+   justify-content:space-around;
+   padding: 20px 8px 8px 8px;
+   position: fixed;
+   bottom: 0;
+   width: 100%;
 }
