--- a/css/home.css
+++ b/css/home.css
@@ -25,3 +25,14 @@ body{
    bottom: 0;
    width: 100%;
 }
+
+.overlay{
+    display: grid;
+    place-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(255,255,255,.895);
+}
