--- a/css/home.css
+++ b/css/home.css
@@ -2,6 +2,17 @@ body{
     min-height: 100vh;
 }
 
+.message{
+    width:auto;
+    margin:20vh auto;
+    padding:0.2rem;
+    background-color:transparent;
+}
+
+.message__text{
+    font-size:2rem;
+}
+
 .main{
     display: flex;
     justify-content: center;
@@ -13,7 +24,11 @@ body{
 }
 
 .card{
+    min-width:300px;
+    width: 30%;
+    max-width:650px;
     margin: 10px 0;
+    overflow: hidden;
 }
 
 .container-buttons{
@@ -35,4 +50,10 @@ body{
     width: 100%;
     height: 100%;
     background-color:rgba(255,255,255,.895);
+}
+
+@media screen and (max-width:420px){
+    .message__text{
+        white-space:pre-line;
+    }
 }
