--- a/css/home.css
+++ b/css/home.css
@@ -2,58 +2,40 @@ body{
     min-height: 100vh;
 }
 
-.message{
-    width:auto;
-    margin:20vh auto;
-    padding:0.2rem;
-    background-color:transparent;
-}
-
-.message__text{
-    font-size:2rem;
+header{
+    display:flex;
+    justify-content: space-around;
 }
 
 .main{
-    display: flex;
+    width:60%;
+    margin-left:auto;
+    margin-right:auto;
+    border:1px solid black;
+    display:flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
-    flex-wrap:wrap;
-    margin:10px 0 80px;
-    padding-bottom:40px;
+}
+
+.contactos{
+    width:50%;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.abreviatura{
+    display:inline-block;
+    width:50px;
+    height:50px;
+    border-radius:50%;
+    color:white;
+    background-color: yellowgreen;
+    text-align:center;
+    line-height:50px;
+    margin:10px;
 }
 
 .card{
-    min-width:300px;
-    width: 30%;
-    max-width:650px;
-    margin: 10px 0;
-    overflow: hidden;
-}
-
-.container-buttons{
-   display: flex;
-   margin-top:80px;
-   justify-content:space-around;
-   padding: 20px 8px 8px 8px;
-   position: fixed;
-   bottom: 0;
-   width: 100%;
-}
-
-.overlay{
-    display: grid;
-    place-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color:rgba(255,255,255,.895);
-}
-
-@media screen and (max-width:420px){
-    .message__text{
-        white-space:pre-line;
-    }
+    display:flex;
+    margin:1.8rem;
 }
