--- a/css/home.css
+++ b/css/home.css
@@ -56,3 +56,27 @@ body{
     background-color: yellowgreen;
     margin: .5rem;
 }
+
+.content-add{
+    position: fixed;
+    width:60%;
+    bottom:50px;
+    text-align:right;
+}
+
+
+.addbtn{
+    width:50px;
+    height:50px;
+    background: none;
+    border: 0;
+    border-radius:50%;
+    background-color: yellowgreen;
+    transition:color .3s ease;
+    cursor:pointer;
+}
+
+.addbtn a {
+    text-decoration:none;
+    color:black;
+}
