--- a/css/head.css
+++ b/css/head.css
@@ -5,12 +5,25 @@ header{
 }
 
 .search {
-    width: 60%;
+    width: 40%;
     place-items: center;
     display: grid;
+    margin:5px auto;
+    min-width:200px;
 }
 
 input[type="search"] {
     width: 80%;
     padding:.5rem;
+}
+
+@media screen and (max-width:1000px){
+    header{
+        justify-content: space-between;
+    }
+    .search{
+        width:60%;
+        margin-left:0;
+        margin-right:0;
+    }
 }
