--- a/css/edit.css
+++ b/css/edit.css
@@ -1,3 +1,18 @@
+:root{
+    --color-background: #535c68;
+    --color-text: #f5f6fa;
+}
+
+body{
+    background-color: var(--color-background);
+    color:var(--color-text);
+    min-height:100vh;
+}
+
+.label{
+    color:var(--color-text);
+}
+
 .abreviatura{
     width:100px;
     height:100px;
@@ -35,4 +50,10 @@ select,input{
 
 .buttons > input {
     cursor:pointer;
+}
+
+@media screen and (max-width:1000px){
+    .content-info{
+        width:80%;
+    }
 }
